Mise en place du terrain de jeu

--- a/src/app/terrain/terrain.component.html
+++ b/src/app/terrain/terrain.component.html
@@ -1,1 +1,37 @@
-
+<div class="terrain">
+    <div class="blocs-container">
+        <div class="left-bloc">
+        </div>
+        <div class="center-blocs">
+            <div class="center-blocs-1">
+                <div class="top-middle-bloc-separator"></div>
+            </div>
+            <div class="center-blocs-2">
+                <div class="bloc">
+                    <div class="sous-bloc-1"></div>
+                    <div class="sous-bloc-2"></div>
+                </div>
+                <div class="bloc">
+                    <div class="sous-bloc-1"></div>
+                    <div class="sous-bloc-2"></div>
+                </div>
+            </div>
+            <div class="center-blocs-3">
+                <div class="bloc">
+                    <div class="sous-bloc-1"></div>
+                    <div class="sous-bloc-2"></div>
+                </div>
+                <div class="bloc">
+                    <div class="sous-bloc-1"></div>
+                    <div class="sous-bloc-2"></div>
+                </div>
+            </div>
+            <div class="center-blocs-4">
+                <div class="sous-bloc-1"></div>
+                <div class="sous-bloc-2"></div>
+            </div>
+        </div>
+        <div class="right-bloc">
+        </div>
+    </div>
+</div>
