--- a/src/app/terrain/terrain.component.html
+++ b/src/app/terrain/terrain.component.html
@@ -1,37 +1,86 @@
-<div class="terrain">
-    <div class="blocs-container">
-        <div class="left-bloc">
+<div class="container">
+    <div class="score-bloc">
+        <h2>JCDecaux Paris Tenis Tour</h2>
+        <table>
+            <tr>
+                <td>Joueur 1 (IA)</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>Joueur 2</td>
+                <td>0</td>
+            </tr>
+        </table>
+        <br>
+        <h2>Gestion position Joueur 2</h2>
+        <table>
+            <tr>
+                <td>Gauche</td>
+                <td>Droite</td>
+            </tr>
+        </table>
+        <br>
+        <app-server-choice (selectedServerPlayer)="getServerPlayer($event)"></app-server-choice>
+
+
+    </div>
+    <div class="terrain">
+        <div class="player1-box">
+            <div class="player-pos"></div>
+            <div class="selected-player-pos">
+                Joueur 1 (IA)
+                <div class="tennis-ball"></div>
+            </div>
+            <div class="player-pos"></div>
+            <div class="player-pos"></div>
         </div>
-        <div class="center-blocs">
-            <div class="center-blocs-1">
-                <div class="top-middle-bloc-separator"></div>
+        <div class="blocs-container">
+            <div class="left-bloc">
             </div>
-            <div class="center-blocs-2">
-                <div class="bloc">
-                    <div class="sous-bloc-1"></div>
-                    <div class="sous-bloc-2"></div>
+            <div class="center-blocs">
+                <div class="center-blocs-1">
+                    <div class="top-middle-bloc-separator"></div>
                 </div>
-                <div class="bloc">
+                <div class="center-blocs-2">
+                    <div class="bloc">
+                        <div class="sous-bloc-1"></div>
+                        <div class="sous-bloc-2"></div>
+                    </div>
+                    <div class="bloc">
+                        <div class="sous-bloc-1"></div>
+                        <div class="sous-bloc-2"></div>
+                    </div>
+                </div>
+                <div class="center-blocs-3">
+                    <div class="bloc">
+                        <div class="sous-bloc-1"></div>
+                        <div class="sous-bloc-2"></div>
+                    </div>
+                    <div class="bloc">
+                        <div class="sous-bloc-1"></div>
+                        <div class="sous-bloc-2"></div>
+                    </div>
+                </div>
+                <div class="center-blocs-4">
                     <div class="sous-bloc-1"></div>
                     <div class="sous-bloc-2"></div>
                 </div>
             </div>
-            <div class="center-blocs-3">
-                <div class="bloc">
-                    <div class="sous-bloc-1"></div>
-                    <div class="sous-bloc-2"></div>
-                </div>
-                <div class="bloc">
-                    <div class="sous-bloc-1"></div>
-                    <div class="sous-bloc-2"></div>
-                </div>
-            </div>
-            <div class="center-blocs-4">
-                <div class="sous-bloc-1"></div>
-                <div class="sous-bloc-2"></div>
+            <div class="right-bloc">
             </div>
         </div>
-        <div class="right-bloc">
+        <div class="player2-box">
+            <div class="player-pos"></div>
+            <div class="player-pos"></div>
+            <div class="selected-player-pos">
+                <div class="tennis-ball"></div>
+                Joueur 2
+            </div>
+            <div class="player-pos"></div>
         </div>
+    </div>
+    <div class="historic-bloc">
+        <h3>Historique de jeu</h3>
+        <span *ngIf="serverPlayer">Selection du serveur : {{ serverPlayer }}</span>
     </div>
 </div>
