Découpage en composants

--- a/src/app/server-choice/server-choice.component.scss
+++ b/src/app/server-choice/server-choice.component.scss
@@ -3,6 +3,7 @@
     border-radius: 5px;
     padding: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
 
