--- a/src/app/historic/historic.component.html
+++ b/src/app/historic/historic.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <h3>Historique de jeu</h3>
-    <span *ngIf="serverPlayer">Selection du serveur : {{ serverPlayer }}</span>
+    <span *ngIf="serverPlayer">Selection du serveur : {{ serverPlayer }}</span><br>
+    <span *ngIf="serverPlayer">Ouverture du premier set</span>
 </div>
